Project 2 Inferno/Main/main/default/objects/Product2/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month to Month</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>