Project 2 Inferno/Main/main/default/objects/Product2/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <displayFormat>P-{0000}</displayFormat>
    <label>Product Id</label>
    <type>AutoNumber</type>
</CustomField>