Project 2 Inferno/Main/main/default/objects/Product2/fields/Service_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Service_Tiers__c</fullName>
    <label>Service Tiers</label>
    <length>25</length>
    <type>Text</type>
</CustomField>